<resources>
    <string name="app_name">V2X</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_v2x" translatable="false">V2X</string>
    <string name="menu_parking" translatable="false">Parking</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="access_token">sk.eyJ1IjoiZmNiYXNtIiwiYSI6ImNrd25sOGxjbDBqbmEycHF0cWtnaXV1bnYifQ.-ful9Mzei-dTkD6QKaLkoQ</string>

    <string name="languageFR">FR</string>
    <string name="languageEN">EN</string>

    <string name="stellantisCar">STELLANTIS</string>
    <string name="otherCar">OTHER</string>
    <string name="moveCar">MOVECAR</string>
    <string name="crash">CRASH</string>
    <string name="tcu">TCU</string>

    <string name="accident">Accident </string>
    <string name="crashat">Accident à </string>
    <string name="infoat">Information à </string>
    <string name="idcar1">1 </string>
    <string name="idcar2">2 </string>
    <string name="idCar">ID : </string>
    <string name="Date">Date : </string>
    <string name="Heure">Heure : </string>
    <string name="Position">Position : </string>
    <string name="Puissance">Puissance : </string>
    <string name="ECU">ECU : </string>

    <string name="connected">TCP Connecté</string>
    <string name="disconnected">TCP Déconnecté</string>
    <string name="connecting">TCP Connexion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>