<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <Button
        android:id="@+id/btnStellantis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:backgroundTint="@color/mapbox_blue"
        android:text="@string/stellantisCar"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/mapbox_blue"
        android:text="@string/otherCar"
        mapbox:layout_constraintStart_toEndOf="@+id/btnStellantis"
        mapbox:layout_constraintTop_toTopOf="@+id/mapview" />

    <Button
        android:id="@+id/btnConnectionTCU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/mapbox_blue"
        android:text="@string/tcu"
        mapbox:layout_constraintStart_toEndOf="@+id/btnOther"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMoveCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/mapbox_blue"
        android:text="@string/moveCar"
        mapbox:layout_constraintStart_toEndOf="@+id/btnConnectionTCU"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCrash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/mapbox_blue"
        android:text="@string/crash"
        app:layout_constraintStart_toEndOf="@+id/btnMoveCar" />

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraZoom="13.6">
        <!--        mapbox:mapbox_cameraTargetLat="48.79542"-->
        <!--        mapbox:mapbox_cameraTargetLng="1.98587"-->


    </com.mapbox.mapboxsdk.maps.MapView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:tint="#FDFEFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_place_24"
        mapbox:backgroundTint="@color/colorstellantis"
        mapbox:useCompatPadding="false" />
</androidx.constraintlayout.widget.ConstraintLayout>